--- a/prototipo/oshi-exemplo/src/main/java/com/mycompany/cerberus/TelaLogin.form
+++ b/prototipo/oshi-exemplo/src/main/java/com/mycompany/cerberus/TelaLogin.form
@@ -56,7 +56,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabel4" alignment="1" max="32767" attributes="0"/>
+              <Component id="jLabel4" alignment="1" pref="611" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -67,17 +67,20 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Group type="102" attributes="0">
+                              <Component id="btnSair" alignment="0" max="32767" attributes="0"/>
+                              <Component id="btnEntrar" alignment="0" pref="537" max="32767" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jLabel5" alignment="1" min="-2" pref="39" max="-2" attributes="0"/>
                                       <Component id="jLabel2" alignment="0" min="-2" pref="43" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txtLogin" max="32767" attributes="0"/>
+                                  <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="txtLogin" pref="452" max="32767" attributes="0"/>
+                                      <Component id="txtSenha" max="32767" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="txtSenha" alignment="1" min="-2" pref="486" max="-2" attributes="0"/>
-                              <Component id="btnSair" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnEntrar" alignment="0" pref="533" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
